added start guide for JavaFX