@@ -1,1 +1,14 @@
 # semesterproject-team3.2
+
+## How to run the application
+
+### CLI
+
+1. run 
+
+### JavaFX
+
+1. Create a Application run configuration
+2. Insert `oceanCleanup.src.GUI.GameApplication` as main class
+3. add `VM options` in the drop-down menu `Modify options`
+4. insert `--add-modules javafx.controls,javafx.fxml --module-path lib` in `VM options`
